apps/otaflux/reference-grant-certs.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-ref-certs
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway
  to:
    - group: ""
      kind: Secret
      name: otaflux-certs
