apps/otaflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otaflux
spec:
  strategy:
    type: RollingUpdate
  template:
    spec:
      serviceAccountName: otaflux
      imagePullSecrets:
        - name: harbor
      containers:
        - name: otaflux
          image: ghcr.io/etiennetremel/otaflux:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
