apps/otaflux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otaflux
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
